@@ -1,17 +1,35 @@
 package edu.ijse.therapycenter.dao.custom.impl;
 
+import edu.ijse.therapycenter.config.FactoryConfiguration;
 import edu.ijse.therapycenter.dao.custom.PaymentDAO;
 import edu.ijse.therapycenter.entity.Payment;
+import org.hibernate.Session;
+import org.hibernate.Transaction;
 
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 public class PaymentDAOImpl implements PaymentDAO {
+
+    private final FactoryConfiguration factoryConfiguration = FactoryConfiguration.getInstance();
+
     @Override
     public boolean save(Payment payment) {
-        return false;
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            Transaction transaction = session.beginTransaction();
+
+            session.save(payment);
+
+            transaction.commit();
+            return true;
+        } catch (Exception e) {
+            e.printStackTrace();
+            return false;
+        }
     }
+
 
     @Override
     public boolean update(Payment payment) {
@@ -25,7 +43,12 @@ public class PaymentDAOImpl implements PaymentDAO {
 
     @Override
     public List<Payment> getAll() {
-        return List.of();
+        try (Session session = FactoryConfiguration.getInstance().getSession()) {
+            return session.createQuery("FROM Payment ", Payment.class).list();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyList();
+        }
     }
 
     @Override
@@ -35,11 +58,37 @@ public class PaymentDAOImpl implements PaymentDAO {
 
     @Override
     public Optional<String> getLastPK() {
-        return Optional.empty();
+        Session session = null;
+        try {
+            session = factoryConfiguration.getSession();
+            Long lastPk = session
+                    .createQuery("SELECT p.id FROM Payment p ORDER BY p.id DESC", Long.class)
+                    .setMaxResults(1)
+                    .uniqueResult();
+
+            Long newPk = (lastPk != null) ? lastPk + 1 : 1;
+
+            System.out.println(newPk);
+
+            return Optional.of(String.valueOf(newPk));
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Optional.empty();
+        } finally {
+            if (session != null) {
+                session.close();
+            }
+        }
     }
 
     @Override
     public boolean exist(String id) throws SQLException, ClassNotFoundException {
         return false;
+    }
+
+    @Override
+    public double calculateBalance(double fee, double amount) {
+        return fee - amount;
     }
 }
